<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/chronometers"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginTop="276dp"
        android:gravity="center"
        android:textAlignment="center"
        android:text="00:00:00"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageButton
        android:id="@+id/playbutton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="200dp"
        android:onClick="playbutton"
        android:contentDescription="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/play"

        />

    <ImageButton
        android:id="@+id/pausebutton"
        android:onClick="pausebutton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="200dp"
        android:contentDescription="@string/pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/resetbutton"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toEndOf="@+id/playbutton"
        app:srcCompat="@drawable/pause" />

    <ImageButton
        android:id="@+id/resetbutton"
        android:onClick="resetbutton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="196dp"
        android:contentDescription="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/reset"
        />

    <TextView
        android:id="@+id/workouttext"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="108dp"
        android:gravity="center"
        android:text="Time not recorded"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/chronometers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

    <TextView
        android:id="@+id/textwork"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="88dp"
        android:layout_marginBottom="84dp"
        android:gravity="center"
        android:text="@string/enter_your_workout_type"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playbutton"
        app:layout_constraintVertical_bias="0.6" />

    <EditText
        android:id="@+id/editworkout"
        android:layout_width="157dp"
        android:layout_height="37dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="80dp"
        android:hint="@string/enter_value"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:importantForAutofill="no"
        />

</androidx.constraintlayout.widget.ConstraintLayout>